@@ -869,8 +869,14 @@ void R_igraph_myhandler (const char *reason, const char *file,
 	igraph_strerror(igraph_errno));
 }
 
+void R_igraph_warning_handler(const char *reason, const char *file,
+			      int line, int igraph_errno) {
+  warning("At %s:%i :%s", file, line, reason);
+}
+
 igraph_interruption_handler_t *R_igraph_oldinterrupt;
 igraph_progress_handler_t *R_igraph_oldprogress;
+igraph_warning_handler_t *R_igraph_oldwarning;
 
 extern int R_interrupts_pending;
 
@@ -913,6 +919,7 @@ int R_igraph_progress_handler(const char *message, igraph_real_t percent,
 
 static R_INLINE void R_igraph_before() {
   R_igraph_oldhandler=igraph_set_error_handler(R_igraph_myhandler);
+  R_igraph_oldwarning=igraph_set_warning_handler(R_igraph_warning_handler);
   R_igraph_oldinterrupt=
     igraph_set_interruption_handler(R_igraph_interrupt_handler);
   R_igraph_attribute_oldtable=
@@ -921,6 +928,7 @@ static R_INLINE void R_igraph_before() {
 
 static R_INLINE void R_igraph_before2(SEXP verbose, const char *str) {
   R_igraph_oldhandler=igraph_set_error_handler(R_igraph_myhandler);
+  R_igraph_oldwarning=igraph_set_warning_handler(R_igraph_warning_handler);
   R_igraph_oldinterrupt=
     igraph_set_interruption_handler(R_igraph_interrupt_handler);
   R_igraph_attribute_oldtable=
@@ -932,12 +940,14 @@ static R_INLINE void R_igraph_before2(SEXP verbose, const char *str) {
 
 static R_INLINE void R_igraph_after() {
   igraph_set_error_handler(R_igraph_oldhandler);
+  igraph_set_warning_handler(R_igraph_oldwarning);
   igraph_set_interruption_handler(R_igraph_oldinterrupt);
   igraph_i_set_attribute_table(R_igraph_attribute_oldtable);
 }
 
 static R_INLINE void R_igraph_after2(SEXP verbose) {
   igraph_set_error_handler(R_igraph_oldhandler);
+  igraph_set_warning_handler(R_igraph_oldwarning);
   igraph_set_interruption_handler(R_igraph_oldinterrupt);
   igraph_i_set_attribute_table(R_igraph_attribute_oldtable);
   if (LOGICAL(verbose)[0]) {
